fixed minor issue : ellipses on authors not showing

--- a/bookshelf/static/css/book.css
+++ b/bookshelf/static/css/book.css
@@ -4,6 +4,9 @@
 
     display: flex;
     justify-content: space-evenly;
+
+    margin-top: 5rem;
+
     background-color: lightskyblue;
 }
 
